--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = ststm32
 board = genericSTM32F103R8
 framework = arduino
+lib_deps = 
+	d03n3rfr1tz3/HC-SR04@^1.1.2
+	arduino-libraries/LiquidCrystal@^1.0.7
